// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketHeader /> should render existing ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between align-items-center mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-4"
        name="input-text-4"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="d-flex justify-content-between align-items-center ml-3"
    >
      <div
        class="arrowPaginationWrapper"
      >
        <ul
          class="container"
        >
          <li
            aria-label="previous"
            class="item paginationItemWrapper btn btn-sm arrow"
            id="pagination-item-arrow-previous"
          >
            <i
              class="material-icons md-2"
            >
              keyboard_arrow_left
            </i>
          </li>
          <li
            aria-label="next"
            class="item paginationItemWrapper btn btn-sm arrow"
            id="pagination-item-arrow-next"
          >
            <i
              class="material-icons md-2"
            >
              keyboard_arrow_right
            </i>
          </li>
        </ul>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary medium"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="icon material-icons"
        >
          more_vert
        </i>
      </button>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="statusAndTags d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="padding: 0.5rem 4px; width: auto; min-width: 16.428571428571427em; max-width: 28.571428571428573em; z-index: 1051;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            >
              <div
                class="wrapper isFocused"
              >
                <input
                  class="input"
                  id="input-text-6"
                  name="input-text-6"
                  placeholder="Search tags..."
                  role="menuitem"
                  type="text"
                  value=""
                />
              </div>
            </h6>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div>
        TicketAssigneeMock
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render new ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between align-items-center mb-2"
  >
    <div
      class="wrapper isFocused component"
    >
      <input
        class="input mr-2 input"
        id="input-text-1"
        name="input-text-1"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="d-flex justify-content-between align-items-center ml-3"
    />
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="statusAndTags d-inline-flex"
    >
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="padding: 0.5rem 4px; width: auto; min-width: 16.428571428571427em; max-width: 28.571428571428573em; z-index: 1051;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            >
              <div
                class="wrapper isFocused"
              >
                <input
                  class="input"
                  id="input-text-2"
                  name="input-text-2"
                  placeholder="Search tags..."
                  role="menuitem"
                  type="text"
                  value=""
                />
              </div>
            </h6>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div>
        TicketAssigneeMock
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render spam ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between align-items-center mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-8"
        name="input-text-8"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="d-flex justify-content-between align-items-center ml-3"
    >
      <div
        class="headerIcon"
      >
        <i
          class="icon material-icons text-danger"
          id="ticket-header-spam-icon"
        >
          flag
        </i>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary medium"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="icon material-icons"
        >
          more_vert
        </i>
      </button>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="statusAndTags d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="padding: 0.5rem 4px; width: auto; min-width: 16.428571428571427em; max-width: 28.571428571428573em; z-index: 1051;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            >
              <div
                class="wrapper isFocused"
              >
                <input
                  class="input"
                  id="input-text-10"
                  name="input-text-10"
                  placeholder="Search tags..."
                  role="menuitem"
                  type="text"
                  value=""
                />
              </div>
            </h6>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div>
        TicketAssigneeMock
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render trashed ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between align-items-center mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-12"
        name="input-text-12"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="d-flex justify-content-between align-items-center ml-3"
    >
      <div
        class="headerIcon"
      >
        <i
          class="icon material-icons text-danger"
          id="ticket-header-trash-icon"
        >
          delete
        </i>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary medium"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="icon material-icons"
        >
          more_vert
        </i>
      </button>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="statusAndTags d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="padding: 0.5rem 4px; width: auto; min-width: 16.428571428571427em; max-width: 28.571428571428573em; z-index: 1051;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            >
              <div
                class="wrapper isFocused"
              >
                <input
                  class="input"
                  id="input-text-14"
                  name="input-text-14"
                  placeholder="Search tags..."
                  role="menuitem"
                  type="text"
                  value=""
                />
              </div>
            </h6>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div>
        TicketAssigneeMock
      </div>
    </div>
  </div>
</div>
`;
